--- a/Romanian/main/DownloadProviderUi.apk/res/values-ro/strings.xml
+++ b/Romanian/main/DownloadProviderUi.apk/res/values-ro/strings.xml
@@ -10,11 +10,13 @@
     <string name="action_settings">Setări</string>
     <string name="ad_mark">AD</string>
     <string name="ad_title">Alte persoane au descărcat aceste fișiere utilizând %1$s </string>
+    <string name="ad_title_other">Persoanele care au descărcat această imagine au mai descărcat și</string>
     <string name="add_flow_fail_haveget_msg">Perioada de încercare a expirat.</string>
     <string name="add_flow_fail_vip_msg">Acceleratorul descărcărilor Xunlei este activ</string>
     <string name="add_flow_success_msg">%s adăugat în această lună</string>
     <string name="all_downloads">Toate descărcările</string>
     <string name="all_fileter">Tot</string>
+    <string name="all_share_files_content">Fișierele selectate au fost șterse deja.</string>
     <string name="all_the_internet">Toată reţeaua</string>
     <string name="apk_filter">Apk</string>
     <string name="app_downloads">%s descărcări</string>
@@ -34,6 +36,7 @@
     <string name="cancel_running_download">Anulaţi</string>
     <string name="cancle">Anulaţi</string>
     <string name="choose_open_time">Selectaţi timpul de deschidere</string>
+    <string name="clear_data">Goliți</string>
     <string name="complete_time">Finalizat:</string>
     <string name="confirm">OK</string>
     <string name="confirm_delete_downloads_message">%d descărcări vor fi şterse.</string>
@@ -50,6 +53,7 @@
     <string name="deselect_all">Deselectaţi-le pe toate</string>
     <string name="deselect_subfile_all">Deselectaţi-le pe toate</string>
     <string name="determine">OK</string>
+    <string name="dialog_btn_ok_disabled_net">Setări de rețea</string>
     <string name="dialog_cannot_resume">Descărcarea a fost întreruptă şi nu poate fi reluată.</string>
     <string name="dialog_confirm_delete_checkbox_message">Ștergeți, de asemenea, fișierele locale</string>
     <string name="dialog_confirm_delete_downloads_message">Ştergeţi %d sarcini?</string>
@@ -61,7 +65,9 @@
     <string name="dialog_insufficient_space_on_cache">Nu se poate finaliza descărcarea. Nu există suficient spaţiu de stocare intern.</string>
     <string name="dialog_insufficient_space_on_external">Nu se poate finaliza descărcarea. Nu există suficient spaţiu de stocare extern.</string>
     <string name="dialog_media_not_found">Nu se poate descărca. Nu este disponibil un mediu de stocare extern.</string>
+    <string name="dialog_msg_disabled_net">%1$s descărcări restricționate în rețeaua curentă. Atingeți butonul Setările rețelei pentru a deschide aplicația Securitate.</string>
     <string name="dialog_queued_body">Fişierul este adăugat în coadă pentru descărcare ulterioară, prin urmare nu este disponibil încă.</string>
+    <string name="dialog_title_disabled_net">Acces la internet</string>
     <string name="dialog_title_not_available">Nu s-a putut descărca</string>
     <string name="dialog_title_queued_body">Fişier la coadă</string>
     <string name="disable">Dezactivaţi</string>
@@ -93,7 +99,7 @@
     <string name="download_list_title_browser">Descărcări</string>
     <string name="download_no_application">Nu există nicio aplicație care să suporte acest format</string>
     <string name="download_no_application_title">Fişierul nu poate fi deschis</string>
-    <string name="download_num_size">%1$s persoane au descărcat | %2$s</string>
+    <string name="download_num_size">%1$s  | %2$s</string>
     <string name="download_paused">Descărcare întreruptă</string>
     <string name="download_pending">Descărcare în aşteptare</string>
     <string name="download_queued">În aşteptare</string>
@@ -130,10 +136,11 @@
     <string name="editmode_menu_delete">Ştergeţi</string>
     <string name="editmode_menu_share">Distribuiţi</string>
     <string name="engine_open">Activaţi</string>
-    <string name="enter_search">Căutați</string>
+    <string name="enter_search">Căutare web</string>
     <string name="experience_xunlei_account_speed">Membri Xunlei pentru accelerarea experienţei serviciului</string>
     <string name="expire_notification_msg">Calitatea de membru Xunlei expiră în curând.</string>
     <string name="expire_today_notification_msg">Calitatea de membru Xunlei expiră astăzi.</string>
+    <string name="extend">Mai multe</string>
     <string name="extract_file">Extragere fişier…</string>
     <string name="file_exist_hint">Acest fișier există deja</string>
     <string name="file_picker">Selectaţi o locaţie</string>
@@ -144,6 +151,7 @@
     <string name="get_data_failed">"Nu s-au putut obține informații; reîncercați mai târziu"</string>
     <string name="get_order_dialog_msg">Obţinere informaţii comandă…</string>
     <string name="get_order_fail_msg">Nu s-a putut crea comanda</string>
+    <string name="goto_global_search">Se caută \"%1$s\" pe internet</string>
     <string name="guess_like">V-ar putea plăcea, de asemenea</string>
     <string name="high_speed_channel">Accelerator Xunlei (achitat):</string>
     <string name="high_speed_tryout">Viteza de descărcare este redusă, deveniți membru Xunlei</string>
@@ -153,6 +161,9 @@
     <string name="high_speed_tryout_time">Perioadă de încercare rămasă: %1$s. Deveniți membru Xunlei.</string>
     <string name="hint">Atenţie</string>
     <string name="immediately_a_renewal">Reînnoiţi acum</string>
+    <string name="info_flow_only_load_wifi">Încarcă sursele recomandate atunci când sunteți conectat la Wi-Fi</string>
+    <string name="info_flow_setting">Setări</string>
+    <string name="info_flow_show">Surse recomandate</string>
     <string name="input_valid_address">Introduceţi calea fişierului</string>
     <string name="install">Instalaţi</string>
     <string name="install_failed">"Nu s-a putut instala %1$s"</string>
@@ -182,10 +193,17 @@
     <string name="new_add_bt">Adăugare torrent</string>
     <string name="no_downloads">Nicio descărcare</string>
     <string name="no_file_hint">Fișierul există deja în lista de descărcări</string>
+    <string name="no_result_for_keyword">"Nu s-a găsit \"%1$s\""</string>
+    <string name="no_share_file">"Nu s-a putut distribui acest fișier"</string>
+    <string name="no_share_file_content">Fișierul selectat a fost șters deja</string>
+    <string name="no_share_files">"Nu se pot distribui fișierele șterse deja"</string>
+    <string name="no_share_files_content">"Unele din fișierele pe care încercați să le distribuiți au fost șterse deja. Celelalte fișiere au fost distribuite cu succes."</string>
     <string name="no_vip_info">Obțineți calitatea de membru Xunlei pentru a accelera descărcările</string>
     <string name="no_vip_show_info">"Accelerare descărcări
 pe toate dispozitivele cu Xunlei"</string>
+    <string name="notify_disabled_net_by_app">Accesul la Internet este restricționat</string>
     <string name="notify_not_support">"Asemenea notificări nu sunt suportate; actualizați acum"</string>
+    <string name="notify_only_wifi_download">Se așteaptă conectarea la Wi-Fi</string>
     <string name="one_month">O lună</string>
     <string name="only_support_torrent">Sunt acceptate doar fișiere torrent</string>
     <string name="open">Deschideţi</string>
@@ -210,7 +228,7 @@ pe toate dispozitivele cu Xunlei"</string>
     <string name="pref_download_revert_default">Prestabilit</string>
     <string name="pref_download_settings_title">Limită dimensiune descărcare</string>
     <string name="pref_download_storage_path">Creaţi un dosar nou pentru descărcări</string>
-    <string name="pref_sniff_shortcut">Crează comandă rapidă</string>
+    <string name="pref_sniff_shortcut">Crează o comandă rapidă pe ecranul principal pentru căutare web</string>
     <string name="pref_summary_any_bytes_popup">Se aşteaptă mereu conexiunea Wi-Fi pentru a descărca fişiere</string>
     <string name="pref_summary_enable_max_bytes_popup">Se afişează o notificare atunci când se utilizează conexiunea de date mobile pentru descărcarea conținutului</string>
     <string name="pref_summary_max_bytes_limit_format">Se aşteaptă conexiunea Wi-Fi dacă dimensiunea fişierului depăşeşte %s</string>
@@ -246,6 +264,7 @@ pe toate dispozitivele cu Xunlei"</string>
     <string name="revert_default">Restaurați setările implicite</string>
     <string name="revert_download_path">Utilizaţi locația prestabilită pentru descărcări?</string>
     <string name="save_path">"Salvaţi descărcările în: "</string>
+    <string name="save_text">Economisiți ￥%1$s</string>
     <string name="search_clear_history_btn">Curăță istoricul de căutare</string>
     <string name="search_clear_history_toast">Istoric golit</string>
     <string name="search_favorite_empty">Adaugă unele surse la favorite</string>
@@ -257,9 +276,12 @@ pe toate dispozitivele cu Xunlei"</string>
     <string name="search_history_today">Astăzi</string>
     <string name="search_history_year">dd/MM/yyyy</string>
     <string name="search_history_yesterday">Ieri</string>
+    <string name="search_home_download_popup">Întoarceți-vă la Descărcări</string>
+    <string name="search_home_vif_show_more">Mai multe</string>
     <string name="search_hot_anime">Desene animate</string>
     <string name="search_hot_movie">Filme</string>
-    <string name="search_hot_source">Surse populare</string>
+    <string name="search_hot_recommend">Recomandate</string>
+    <string name="search_hot_source">Populare</string>
     <string name="search_hot_tv">Emisiuni TV</string>
     <string name="search_hot_variety">Divertisment</string>
     <string name="search_hotwords">Cuvinte cheie</string>
@@ -269,7 +291,9 @@ pe toate dispozitivele cu Xunlei"</string>
     <string name="search_nonetwork_prompt">Verificați conexiunea la rețea și reîncercați</string>
     <string name="search_nonetwork_refresh">Reîmprospătare</string>
     <string name="search_recommend_empty">Niciun element</string>
-    <string name="search_website">Sursa siteuri internet</string>
+    <string name="search_vif_empty">Nu există elemente recomandate</string>
+    <string name="search_vif_score_text">Evaluare: %1$s</string>
+    <string name="search_website">Site-uri web</string>
     <string name="search_website_more">Mai multe</string>
     <string name="select_all">Selectaţi-le pe toate</string>
     <string name="select_operation_items">Selectaţi elementele</string>
@@ -279,25 +303,24 @@ pe toate dispozitivele cu Xunlei"</string>
     <string name="setting_close_debug">Modul Depanare dezactivat</string>
     <string name="setting_debug_fail">Nu s-a putut intra în Modul Depanare</string>
     <string name="setting_open_debug">Modul Depanare activat. Apăsați aici de 6 ori pentru a dezactiva Modul Depanare.</string>
-    <string name="shortcut_dialog_content">Creați un widget pe ecranul principal pentru a căuta surse în mod direct.</string>
+    <string name="shortcut_dialog_content">Creați un widget pe ecranul principal pentru a găsi mai rapid surse.</string>
     <string name="shortcut_dialog_create">Creați</string>
     <string name="shortcut_dialog_title">Creați un widget pe ecranul principal?</string>
     <string name="show_more">Mai multe (%s)</string>
-    <string name="sniff_associate_text">Apăsați cuvântul cheie de mai jos pentru a găsi mai multe surse</string>
+    <string name="sniff_associate_text">Populare</string>
     <string name="sniff_bt_text">Fișier torrent</string>
     <string name="sniff_btn_text">Găsiți sursa</string>
-    <string name="sniff_cannot_use">"Nu s-a putut accesa linkul; apăsați adresa de descărcare."</string>
+    <string name="sniff_cannot_use">"Nu se poate utiliza căutarea globală; atingeți adresa de descărcare."</string>
     <string name="sniff_connect_error_page_tips">"Nu s-a putut deschide adresa URL"</string>
     <string name="sniff_connect_error_refresh">Reîncărcare</string>
+    <string name="sniff_copyright_text">"Nu se pot afișa rezultatele datorită unor probleme legate de drepturile de autor"</string>
     <string name="sniff_download_task_already_exist">Această sarcină de descărcare există deja</string>
     <string name="sniff_download_task_create_success">Adăugat în lista descărcărilor</string>
-    <string name="sniff_find_some_prefix">Găsite</string>
-    <string name="sniff_find_some_suffix">elemente</string>
-    <string name="sniff_finding_resource_prompt">Se caută sursa…</string>
+    <string name="sniff_finding_resource_prompt">Se caută pe web…</string>
     <string name="sniff_hot_text">Înrudite</string>
     <string name="sniff_no_network_tip">Verificaţi conexiunea la rețea și reîncercaţi</string>
     <string name="sniff_no_result_text">Niciun rezultat găsit</string>
-    <string name="sniff_result_empty_prompt">"Nu s-a găsit sursa"</string>
+    <string name="sniff_result_empty_prompt">Rezultate ale căutării web</string>
     <string name="sniff_result_num_prefix">Găsită</string>
     <string name="sniff_result_num_video_suffix">elemente</string>
     <string name="sniff_result_num_website_suffix">site-uri internet</string>
@@ -310,13 +333,18 @@ pe toate dispozitivele cu Xunlei"</string>
     <string name="sniff_shortcut_create">Widget creat</string>
     <string name="sniff_shortcut_exist">Widgetul există deja</string>
     <string name="sniff_shortcut_failed">"Nu s-a putut crea widgetul"</string>
-    <string name="sniff_shortcut_name">Găsire sursă</string>
-    <string name="sniff_shortcut_tip">Adăugați widgeturi pentru a găsi resurse mai rapid.</string>
+    <string name="sniff_shortcut_name">Căutare web</string>
+    <string name="sniff_shortcut_tip">Puteți adăuga un widget pentru căutarea web pe ecranul principal.</string>
     <string name="sniff_shortcut_tip2">Găsiți surse pentru descărcări din ecranul principal.</string>
     <string name="sniff_sniffing_btn_text">Căutare sursă…</string>
     <string name="sniff_terms_agree">Acceptare</string>
+    <string name="sniff_terms_agree_new">De acord</string>
+    <string name="sniff_terms_check_text">Accept Termenii de utilizare a serviciului</string>
     <string name="sniff_terms_msg">Trebuie să acceptați \"Termenii de utilizare\" pentru a putea utiliza și alte motoare de căutare.</string>
+    <string name="sniff_terms_msg_a">Această funcție de căutare este oferită de un dezvoltator terț. Trebuie să acceptați Termenii de utilizare a serviciului pentru a o putea utiliza.</string>
+    <string name="sniff_terms_msg_b">Această funcție de căutare este oferită de un dezvoltator terț. Trebuie să acceptați Termenii de utilizare a serviciului pentru a o putea utiliza. Dacă sunteți de acord, bifați căsuța de mai jos.</string>
     <string name="sniff_terms_msg_bold">Termenii de utilizare</string>
+    <string name="sniff_terms_msg_bold_new">Termenii de utilizare a serviciului</string>
     <string name="sniff_terms_reject">Revocare</string>
     <string name="sniff_terms_title">Atenție</string>
     <string name="sniff_text_sniff_next_page">Continuați &gt;</string>
@@ -336,6 +364,8 @@ pe toate dispozitivele cu Xunlei"</string>
     <string name="subfile_list">Fișiere</string>
     <string name="task_detail">Sarcini</string>
     <string name="task_detail_notfound_confirm">OK</string>
+    <string name="task_fail">Eșuat</string>
+    <string name="text_showmore_infoflow">Vedeți surse suplimentare</string>
     <string name="third_web_cancel">Anulaţi</string>
     <string name="third_web_confirm">OK</string>
     <string name="third_web_default">Se memorează această alegere</string>
@@ -343,8 +373,10 @@ pe toate dispozitivele cu Xunlei"</string>
     <string name="third_web_filesize">Dimensiune</string>
     <string name="third_web_savepath">Locaţie</string>
     <string name="third_web_title">Salvaţi</string>
+    <string name="title_homepage_infoflow">Actualizări recente</string>
     <string name="title_tips">Atenţie</string>
     <string name="title_unbind_xunlei">Eliminaţi contul Xunlei</string>
+    <string name="toast_only_wifi_download">Conectați-vă la Wi-Fi pentru a descărca acest element</string>
     <string name="toast_xunlei_engine_open">Acceleratorul descărcărilor Xunlei este activat</string>
     <string name="torrent_file_error">Nu s-a putut analiza acest fișier torrent</string>
     <string name="torrent_no_subfile">Niciun fişier în acest torrent</string>
@@ -379,7 +411,7 @@ Se accelerează descărcările pe toate dispozitivele.</string>
     <string name="xl_highway_title">Canalul de viteză sporită:   </string>
     <string name="xl_month_vip_open">Abonament lunar (%1$s Credite Mi)</string>
     <string name="xl_month_vip_renew">Reînnoire pentru o lună (%1$s Credite Mi)</string>
-    <string name="xl_pay_info">Total %1$sCNY, economisiți %2$sCNY</string>
+    <string name="xl_pay_info">Total %1$s CNY, economisiți %2$s CNY</string>
     <string name="xl_privilege_play">Redare fișiere descărcate</string>
     <string name="xl_privilege_play_info">Distribuiți descărcările nefinalizate pe mai multe dispozitive</string>
     <string name="xl_privilege_speedup">Accelerator descărcări</string>
