--- a/Romanian/main/XMRemoteController.apk/res/values-ro/strings.xml
+++ b/Romanian/main/XMRemoteController.apk/res/values-ro/strings.xml
@@ -44,6 +44,7 @@
     <string name="add_new_tv">Adaugați un televizor nou…</string>
   <string name="add_new_tv_power_only">Meci comutator de alimentare TV ...</string>
   <string name="adjust_auto_tune_interval">Intervalul de ajustare automată pentru Taiwan</string>
+  <string name="agile_control">&lt;u&gt;&amp;#24555;&amp;#25463;&amp;#36965;&amp;#25511;&amp;#22120;&lt;/u&gt;</string>
     <string name="agree">De acord</string>
     <string name="airkan_disconnect">Dispozitivele nu sunt conectate</string>
     <string name="airkan_disconnect_display_name">Dispozitivele nu sunt conectate</string>
@@ -210,15 +211,20 @@
   <string name="epg_book_program">rezervare %1$s [%2$s] cu succes</string>
     <string name="epg_bookable">Rezervare</string>
     <string name="epg_booked">Rezervate</string>
+  <string name="epg_booked_program_time_left">rezervate pe （există %1$s difuzate）</string>
     <string name="epg_booked_str">Programat</string>
     <string name="epg_bottom_subtitle_textview_str">Împerecheați cu decodorul pentru a vedea detalii suplimentare</string>
     <string name="epg_bottom_subtitle_textview_str2">Apăsați pentru a vedea telecomanda</string>
     <string name="epg_bottom_title_textview_str">Apăsați pentru a împerechea decodorul</string>
   <string name="epg_cancel_book_program">%1$s [%2$s] Anulare rezervare</string>
     <string name="epg_change_channel">Comutați canalele</string>
+  <string name="epg_change_channel_casting">Pentru Taiwan (difuzat)</string>
+  <string name="epg_change_channel_not_casting">Pentru Taiwan （există %1$s difuzate）</string>
     <string name="epg_channel_group_open">Arătați tot</string>
   <string name="epg_channel_operation_tip">Presa canalul poate fi editat sau favorite</string>
   <string name="epg_channel_search_hint">Introduceți numărul/numele canalului</string>
+  <string name="epg_comment_action_bar_title">revizuire: %1$s</string>
+  <string name="epg_comment_list_title">revizuire（%1$d）</string>
     <string name="epg_detail_title_text">Descriere</string>
     <string name="epg_details_episode">Ep. %1$s</string>
   <string name="epg_edit_channel_name">numele canalului</string>
@@ -231,12 +237,20 @@
   <string name="epg_home_sliding_down">Restrângeți</string>
   <string name="epg_home_sliding_up">Extindeți</string>
     <string name="epg_hot_channels">Canale populare</string>
+  <string name="epg_hot_comment_list_title">comentarii minunate</string>
     <string name="epg_hot_programs">Programe populare</string>
+  <string name="epg_latest_comment_list_title">Comentarii recente（%1$d）</string>
+  <string name="epg_load_comment">Cele mai recente comentarii la preluarea</string>
+  <string name="epg_load_more_latest_comment">Noțiuni de bază Mai multe recenzii</string>
     <string name="epg_loading_hint">Schimbați canalele de la decodor utilizând telefonul</string>
+  <string name="epg_more_comment_list_title">Mai multe Top Comentarii（%1$d）</string>
     <string name="epg_name">programe TV</string>
   <string name="epg_no_booking_data">Programul nu a fost setat</string>
+  <string name="epg_no_more_latest_comment">Nu există alte comentarii în sus</string>
   <string name="epg_no_program_data">Nu am găsit programe</string>
   <string name="epg_no_search_result">Nu există rezultate</string>
+  <string name="epg_not_booked_program_time_left">rezervare （există %1$s difuzate）</string>
+  <string name="epg_program_comment">Scrie o opinie</string>
   <string name="epg_program_detail_more_time_events">Mai mult timp de emisie</string>
   <string name="epg_program_updated_to">programul %1$d actualizat</string>
   <string name="epg_search_box_hint">Căutați programele TV pe care doriți să le vizionați</string>
