--- a/Romanian/main/AuthManager.apk/res/values-ro/strings.xml
+++ b/Romanian/main/AuthManager.apk/res/values-ro/strings.xml
@@ -220,6 +220,8 @@
     <string name="HIPS_Perm_add_voicemail_Desc">adăugare mesaje vocale</string>
     <string name="HIPS_Perm_get_accounts">Accesare conturi de pe telefon</string>
     <string name="HIPS_Perm_get_accounts_Desc">accesarea tuturor conturilor de pe telefon</string>
+    <string name="HIPS_Perm_get_tasks">Obținerea sarcinilor</string>
+    <string name="HIPS_Perm_get_tasks_Desc">obținerea sarcinilor</string>
     <string name="HIPS_Perm_install_shortcut">Widgeturi pe ecranul principal</string>
     <string name="HIPS_Perm_install_shortcut_Desc">adăugarea de widgeturi pe ecranul principal</string>
     <string name="HIPS_Perm_process_nfc">NFC</string>
