--- a/Romanian/main/DeskClock.apk/res/values-ro/strings.xml
+++ b/Romanian/main/DeskClock.apk/res/values-ro/strings.xml
@@ -51,6 +51,9 @@
     <string name="edit_systemtime">Editaţi data şi ora sistemului</string>
     <string name="elapsed_time_format">+%s</string>
     <string name="every_day">În fiecare zi</string>
+    <string name="force_touch_add_alarm">Adăugați o alarmă</string>
+    <string name="force_touch_enter_stopwatch">Cronometru</string>
+    <string name="force_touch_enter_timer">Temporizator</string>
     <string name="full_wday_month_day_no_year">EEEE, d MMMM</string>
     <string name="hour">1 oră</string>
     <string name="hour_unit">h</string>
