--- a/Romanian/main/Mipub.apk/res/values-ro/strings.xml
+++ b/Romanian/main/Mipub.apk/res/values-ro/strings.xml
@@ -9,7 +9,7 @@
     <string name="add_timing">Temporizator</string>
     <string name="already_followed">"Urmăriți deja acest număr"</string>
     <string name="app_name">com.miui.mipub</string>
-    <string name="attach_image">Fotografii</string>
+    <string name="attach_image">Imagini</string>
     <string name="attach_slideshow">Slideshow</string>
     <string name="attach_sound">Audio</string>
     <string name="attach_subject">Subiect</string>
@@ -23,7 +23,7 @@
     <string name="bookmark_list_title">Favorite</string>
     <string name="cannot_send_message">"Nu s-a putut trimite mesajul"</string>
     <string name="check_network">Setări pentru rețea</string>
-    <string name="compressing">Fotografia este prea mare. Se comprimă…</string>
+    <string name="compressing">Dimensiunea imaginii este prea mare. Se comprimă…</string>
     <string name="confirm_delete_all_conversations">Ștergeți toate conversațiiles?</string>
     <string name="confirm_delete_conversation">Ștergeți tot firul de conversație?</string>
     <string name="confirm_delete_group_message">Ștergeți întreg grupul de mesaje?</string>
@@ -67,7 +67,7 @@
     <string name="ex_type_sms">SMS/MMS</string>
     <string name="exceed_message_size_limitation">A fost atinsă dimensiunea maximă a mesajului.</string>
     <string name="failed_to_add_media">"Nu puteți adăuga acest %1$s în mesaj."</string>
-    <string name="failed_to_resize_image">Fotografia nu a fost redimensionată.</string>
+    <string name="failed_to_resize_image">"Nu s-a putut redimensiona imaginea."</string>
     <string name="feedback_description_hint">Scrieți un comentariu aici</string>
     <string name="feedback_submit">Trimis</string>
     <string name="festival_networking_desc">Această caracteristică trebuie să se conecteze la internet pentru a funcționa în mod normal.</string>
@@ -121,8 +121,8 @@
     <string name="mx_dspt">Trimiteți mesaje altor utilizatori de telefoane MIUI fără a fi taxat</string>
     <string name="mx_enable">Mesaje Mi</string>
     <string name="mx_msg">Mesaje Mi</string>
-    <string name="mx_on_sim_1">Mesaje Mi slot SIM 1</string>
-    <string name="mx_on_sim_2">Mesaje Mi slot SIM 2</string>
+    <string name="mx_on_sim_1">Mesaje Mi SIM 1</string>
+    <string name="mx_on_sim_2">Mesaje Mi SIM 2</string>
     <string name="mx_recommend_msg">Apăsați pentru a activa Mesaje Mi.</string>
     <string name="need_download">Sincronizare…</string>
     <string name="network_error">Eroare de rețea</string>
@@ -144,7 +144,7 @@
     <string name="prefDefault_ringtone_repeat">1</string>
     <string name="pref_advanced_settings_title">Setări suplimentare</string>
     <string name="pref_collapse_sp_messages_summary">Grupează notificările operatorului în același fir de conversații</string>
-    <string name="pref_edit_smsc_address">Numărul centrului de mesaje(SMSC)</string>
+    <string name="pref_edit_smsc_address">Centrul serviciului de mesaje scurte(SMSC)</string>
     <string name="pref_forward_title">Redirecționare</string>
     <string name="pref_key_mx_feedback">Comentariu</string>
     <string name="pref_messages_to_save">Stabiliți numărul de mesaje ce vreți să fie salvate</string>
@@ -158,7 +158,7 @@
     <string name="pref_summary_hide_festival">Ascunde caracterele chinezești atunci când nu este selectată limba chineză</string>
     <string name="pref_summary_manage_sim_messages">Administrați mesajele de pe cartela SIM</string>
     <string name="pref_summary_mx_feedback">Raportați erorile și trimiteți feedback</string>
-    <string name="pref_summary_notification_body_enabled">Arată mesajele în ecranul de blocare și în ecranul de notificări</string>
+    <string name="pref_summary_notification_body_enabled">Arată mesajele în Ecranul de blocare și în Ecranul de notificări</string>
     <string name="pref_summary_show_recent_contacts">Arată contactele recente atunci când se compune un mesaj</string>
     <string name="pref_system_title">Sistem</string>
     <string name="pref_time_auto_group_summary">Grupează mesajele recepționate la același minut în același fir de conversații</string>
@@ -171,7 +171,7 @@
     <string name="pref_title_hide_festival">Ascunde caracterele chinezești</string>
     <string name="pref_title_manage_sim_messages">Administrați mesajele de pe cartela SIM</string>
     <string name="pref_title_miui_card">Trimite prin carte de vizită</string>
-    <string name="pref_title_notification_body_enabled">Arată mesajele în ecranul de blocare</string>
+    <string name="pref_title_notification_body_enabled">Arată mesajele în Ecranul de blocare</string>
     <string name="pref_title_ringtone_repeat">Numărul de sunete de notificare</string>
     <string name="pref_title_show_recent_contacts">Arată contactele recente</string>
     <string name="pref_title_vcard">Trimite prin vCard</string>
@@ -187,7 +187,7 @@
     <string name="remove">Eliminați</string>
     <string name="replace">Înlocuiți</string>
     <string name="resent_message">Retrimitere</string>
-    <string name="resize_image_error_information">Această fotografie este prea mare, chiar și după redimensionare.</string>
+    <string name="resize_image_error_information">Această imagine este prea mare pentru a putea fi trimisă, chiar și după redimensionare.</string>
     <string name="restore_blocked_message">Restaurați mesajul</string>
     <string name="retrive_hms_tips">Recuperare…</string>
     <string name="save">Salvare</string>
@@ -227,9 +227,9 @@
     <string name="try_again">Reîncercați</string>
     <string name="type_attachment">atașament</string>
     <string name="type_audio">audio</string>
-    <string name="type_picture">fotografie</string>
-    <string name="type_to_compose_text_enter_to_send">Scrieți mesajul</string>
-    <string name="type_to_compose_text_or_leave_blank">Scrieți un mesaj sau lăsați necompletat</string>
+    <string name="type_picture">imagine</string>
+    <string name="type_to_compose_text_enter_to_send">Introduceți mesajul</string>
+    <string name="type_to_compose_text_or_leave_blank">Introduceți un mesaj sau lăsați necompletat</string>
     <string name="type_vcard">vCard</string>
     <string name="type_video">videoclip</string>
     <string name="undelivered_msg_dialog_title">Mesaj netrimis</string>
