--- a/Romanian/main/MiuiKeyguard.apk/res/values-ro/strings.xml
+++ b/Romanian/main/MiuiKeyguard.apk/res/values-ro/strings.xml
@@ -25,6 +25,7 @@
     <string name="incorrect_pukcode_remaining_attempts">Cod PUK incorect, au rămas %d încercări</string>
     <string name="input_password_after_boot_msg">"Introduceți parola pentru a debloca telefonul"</string>
     <string name="input_password_hint_text">Introduceţi parola</string>
+    <string name="input_pattern_hint_text">Desenați modelul de deblocare</string>
     <string name="input_pin_code">Introduceţi codul PIN</string>
     <string name="input_puk_code">Introduceţi codul PUK</string>
     <string name="invalid_confirm_pin_hint">Codurile PIN nu se potrivesc</string>
