--- a/Romanian/main/MiuiSystemUI.apk/res/values-ro/strings.xml
+++ b/Romanian/main/MiuiSystemUI.apk/res/values-ro/strings.xml
@@ -193,6 +193,11 @@ Utilizați doar încărcătorul furnizat de producător."</string>
     <string name="screen_pinning_negative">Nu, mulţumesc</string>
     <string name="screen_pinning_positive">Am înţeles</string>
     <string name="screen_pinning_title">Ecran fixat</string>
+    <string name="screenshot_delete">Ștergeți</string>
+    <string name="screenshot_delete_dlg_msg">Sunteți sigur că doriți să ștergeți această captură de ecran?</string>
+    <string name="screenshot_delete_dlg_title">Ștergere</string>
+    <string name="screenshot_dlg_cancel">Renunță</string>
+    <string name="screenshot_dlg_delete_button">Șterge</string>
     <string name="screenshot_edit">Editați</string>
     <string name="screenshot_failed_text">Captura de ecran nu a putut fi salvată. Este posibil să fie utilizată stocarea.</string>
     <string name="screenshot_long_screenshot">Extindeți</string>
