--- a/Romanian/main/Mms.apk/res/values-ro/strings.xml
+++ b/Romanian/main/Mms.apk/res/values-ro/strings.xml
@@ -185,6 +185,7 @@
     <string name="file_title">Nume:</string>
     <string name="file_width_height">Dimensiune:</string>
     <string name="flatshow_page_no">%1$d</string>
+    <string name="force_touch_new_message_title">Mesaj nou</string>
     <string name="forward_from">Redirecţionat de la:</string>
     <string name="forward_prefix">"Redir.: "</string>
     <string name="found_old_messages">Încărcaţi mesajele din %1$s în %2$s?</string>
@@ -340,6 +341,7 @@
     <string name="need_download">Sincronizare…</string>
     <string name="networking_allow_continue">OK</string>
     <string name="networking_allow_desc">"Mesageria inteligentă vă permite să trimiteți gratuit mesaje text și vocale, să identificați numerele necunoscute, să filtrați mesajele nedorite, etc. Utilizând acest serviciu, sunteți de acord cu %1$s și %2$s Xiaomi. Trebuie să porniți serviciul Pagini Galbene și să vă conectați la internet pentru a utiliza acest serviciu."</string>
+    <string name="networking_allow_desc_without_mx">"Mesageria inteligentă vă permite să identificați numerele necunoscute, să filtrați mesajele nedorite, etc. Utilizând acest serviciu, sunteți de acord cu %1$s și %2$s Xiaomi. Trebuie să porniți serviciul Pagini Galbene și să vă conectați la internet pentru a utiliza acest serviciu."</string>
     <string name="networking_allow_title">Atenție</string>
     <string name="new_message">Mesaj nou</string>
     <string name="new_message_arrived">Aveţi un mesaj nou</string>
@@ -373,6 +375,7 @@
     <string name="pref_allow_network_access_summary">Porniți pentru a obține rapoarte de trimitere și alte servicii.</string>
     <string name="pref_cell_broadcast">Cell Broadcasts</string>
     <string name="pref_collapse_sp_messages_summary">Grupaţi notificările operatorului în același fir</string>
+    <string name="pref_delivery_ringtone">Notificare sonoră</string>
     <string name="pref_edit_smsc_address">Centrul de servicii mesaje scurte(SMSC)</string>
     <string name="pref_forward_title">Redirecţionaţi</string>
     <string name="pref_message_recovery_introduction_title">Recuperare mesaje</string>
@@ -387,6 +390,7 @@
     <string name="pref_summary_allow_si_sl_push">Permiteţi încărcarea conținutului din site-urile web</string>
     <string name="pref_summary_delete_limit">%1$s mesaje per conversaţie</string>
     <string name="pref_summary_delivery_reports">Solicitaţi un raport de livrare pentru fiecare mesaj trimis</string>
+    <string name="pref_summary_delivery_ringtone">Primiți o confirmare sonoră pentru mesajele expediate.</string>
     <string name="pref_summary_hide_festival">Ascundeţi fila \"Recomandate\" pentru limbile non-Chineze</string>
     <string name="pref_summary_manage_sim_messages">Gestionaţi mesajele stocate pe cartela SIM</string>
     <string name="pref_summary_mms_auto_retrieval">Descărcați fotografiile și videoclipurile din mesaje în mod automat</string>
