--- a/Romanian/main/Music.apk/res/values-ro/strings.xml
+++ b/Romanian/main/Music.apk/res/values-ro/strings.xml
@@ -42,6 +42,7 @@
     <string name="all_tracks">Toate melodiile</string>
     <string name="all_tracks_short">Toate melodiile</string>
     <string name="already_download">Descărcare…</string>
+    <string name="already_download_btn">Se descarcă…</string>
     <string name="already_favorited">Există deja în Favorite</string>
     <string name="android_sdk_too_low">"Versiunea Android este prea veche pentru a se putea actualiza aplicația Muzică. Faceți upgrade la cea mai recentă versiune Android pentru a putea primi actualizări."</string>
     <string name="apk_filter">Apk</string>
@@ -183,10 +184,12 @@
     <string name="download_cloud_error_retryable">Eroare de server Mi Cloud, încercați din nou mai târziu.</string>
     <string name="download_cloud_error_unknow">"Nu s-a putut conecta la Mi Cloud."</string>
     <string name="download_complete">Descărcare completă</string>
+    <string name="download_complete_btn">Instalată…</string>
     <string name="download_complete_start_install">Instalare…</string>
     <string name="download_completed">Descărcată</string>
     <string name="download_confirm_button_text">Instalați</string>
     <string name="download_confirm_text">Muzică Mi va descărca și instala %s</string>
+    <string name="download_done_btn">Descărcată</string>
     <string name="download_error">Eroare</string>
     <string name="download_error_insufficient_space">Spațiu insuficient</string>
     <string name="download_filesize_unknown">Necunoscută</string>
@@ -215,6 +218,7 @@
     <string name="download_share_dialog">Partajați prin</string>
     <string name="download_speed_null"/>
     <string name="download_start">Pornire descărcare…</string>
+    <string name="download_start_btn">Descărcare gratuită…</string>
     <string name="download_success">Finalizată</string>
     <string name="download_title_sorted_by_date">Descărcări - Sortate după dată</string>
     <string name="download_title_sorted_by_size">Descărcări - Sortate după dimensiune</string>
