--- a/Romanian/main/Settings.apk/res/values-ro/strings.xml
+++ b/Romanian/main/Settings.apk/res/values-ro/strings.xml
@@ -2155,6 +2155,7 @@ Pentru a şterge muzică, imagini şi alte date ale utilizatorului, "<b>cardul S
   <string name="path_edge_handgrip">Settings/Edge controls</string>
     <string name="path_equalizer">Setări/Sunet și vibrații/Setări audio/Egalizator</string>
     <string name="path_font_settings">Setări/Afișaj/Fontul sistemului</string>
+    <string name="path_gesture_wakeup_title">Setări/Afișaj/Apăsare dublă pe ecran pentru pornire</string>
     <string name="path_gps_settings">Setări/Setări adiționale/Confidențialitate/Locație</string>
     <string name="path_handy_mode_settings">Setări/Setări adiționale/One_handed mode</string>
     <string name="path_home_key">Setări/Setări adiționale/Butoane/Acasă</string>
@@ -2773,6 +2774,7 @@ Pentru a utiliza fixarea ecranului:
     <string name="search_empty">Niciun rezultat</string>
     <string name="search_equalizer">Egalizator</string>
     <string name="search_font">Fontul sistemului</string>
+    <string name="search_gesture_wakeup_title">Apăsare dublă pe ecran pentru pornire</string>
     <string name="search_gps">GPS;Acces la locație</string>
     <string name="search_handy_mode">Modul operare cu o mână</string>
     <string name="search_hint">Setări căutare</string>
